crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@pruned-fill-disabled.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="pruned-fill-disabled"
description="Dense L2 cluster demonstrates no-fill-back sub-degree selection."
dim=8 m=4 ef_construction=8 ef_search=16 metric=L2 quantization_enabled=false quantization_rescore=false
neighbor_select="no_fill_back"
==== GRAPH ====
nodes=8 dim=8 entry_point=idx0 max_layer=0
node_head=[n1:L0:[1], n2:L0:[2], n3:L0:[2], n4:L0:[2], n5:L0:[2], n6:L0:[2], n7:L0:[2], n8:L0:[1]]
==== SECTIONS ====
GRPH(len=419, blake3_8=0d999d6e7fefa5b1, dim=8, nodes=8, entry_point=idx0, max_layer=0, head=[n1:L0:[1], n2:L0:[2], n3:L0:[2], n4:L0:[2]])
VECS(len=282, blake3_8=d989b2cb555910c0, dim=8, nodes=8, components=64, head=[+0.000, +0.001, +0.002, +0.003, +0.004, +0.005])
QUNT(empty)
==== RESULT ====
roundtrip.recovered_matches_source=true
