crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@quantized-asymmetric-search-l2.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="quantized-asymmetric-search-l2"
description="SQ8 asymmetric L2 search on the same numeric scale as f32."
dim=4 m=16 ef_construction=200 ef_search=50 metric=L2 quantization_enabled=true quantization_rescore=false
neighbor_select="default"
quantization_method="sq8"
==== GRAPH ====
nodes=50 dim=4 entry_point=idx0 max_layer=0
node_head=[n1:L0:[20], n2:L0:[22], n3:L0:[30], n4:L0:[19], n5:L0:[32], n6:L0:[30], n7:L0:[25], n8:L0:[32]]
==== SECTIONS ====
GRPH(len=8021, blake3_8=bce306f006500de6, dim=4, nodes=50, entry_point=idx0, max_layer=0, head=[n1:L0:[20], n2:L0:[22], n3:L0:[30], n4:L0:[19]])
VECS(len=826, blake3_8=798aa95c78b7ae5a, dim=4, nodes=50, components=200, head=[-0.571, -0.544, -0.097, -0.588, -0.849, +0.404])
QUNT(len=508, blake3_8=789c0510eb154ab1, method="sq8", dim=4, nodes=50, codes=200, ranges=4, norms=50)
==== RESULT ====
f32_baseline.rows
  [0] n26	-0.479151
  [1] n17	-0.600151
  [2] n12	-0.707109
  [3] n24	-0.812756
  [4] n11	-0.850700
  [5] n47	-0.882249
sq8_asymmetric.rows
  [0] n26	-0.475680
  [1] n17	-0.597868
  [2] n12	-0.710303
  [3] n24	-0.810583
  [4] n11	-0.850021
  [5] n47	-0.882356
sq8_rescored.rows
  [0] n26	-0.479151
  [1] n17	-0.600151
  [2] n12	-0.707109
  [3] n24	-0.812756
  [4] n11	-0.850700
  [5] n47	-0.882249
