crates/selene-vector/tests/snapshots/vector_snapshot_corpus__corpus_snapshots_match@recovery-replay-30-delete-vecu.snap
---
source: crates/selene-vector/tests/vector_snapshot_corpus.rs
expression: snapshot.to_string()
---
==== CONFIG ====
slug="recovery-replay-30-delete-vecu"
description="Snapshot recovery followed by one VECU Delete event."
dim=4 m=16 ef_construction=200 ef_search=50 metric=Cosine quantization_enabled=false quantization_rescore=false
neighbor_select="default"
==== GRAPH ====
nodes=30 dim=4 entry_point=idx16 max_layer=2
node_head=[n1:L0:[29], n2:L0:[29], n3:L0:[29], n4:L0:[29], n5:L1:[29/6], n6:L0:[29], n7:L0:[29], n8:L0:[29]]
==== SECTIONS ====
GRPH(len=5041, blake3_8=f9c07b44ad0e46c5, dim=4, nodes=30, entry_point=idx16, max_layer=2, head=[n1:L0:[29], n2:L0:[29], n3:L0:[29], n4:L0:[29]])
VECS(len=506, blake3_8=dbeba38b20e68a5f, dim=4, nodes=30, components=120, head=[+0.516, -0.103, +0.007, -0.605, -0.192, -0.527])
QUNT(empty)
==== RESULT ====
replay.byte_identical=true
replay.graph nodes=30 dim=4 entry_point=idx16 max_layer=2
replay.node_head=[n1:L0:[29], n2:L0:[29], n3:L0:[29], n4:L0:[29], n5:L1:[29/6], n6:L0:[29], n7:L0:[29], n8:L0:[29]]
